deploy/myblog/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: myblog
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: myblog
  type: ClusterIP
